Clickup task ID [2y8f8pu]: Fixed algo logo sizing, borders and alignment.

--- a/Algoverse-app/src/styles.scss
+++ b/Algoverse-app/src/styles.scss
@@ -448,3 +448,9 @@ textarea {
     }
   }
 }
+
+.algo-logo {
+  width: 25px !important;
+  height: 25px !important;
+  border-radius: unset !important;
+}
